--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1,148 +1,4 @@
-$m-padding:16px;
-$s-padding: 8px;
-
-$m-margin: $m-padding;
-$s-margin: $s-padding;
-
-$m-font: 1rem;
-
-$m-radius: 4px;
-
-$shadow: 0px 10px 20px 10px rgba(0,0,0,.2);
-
-// colors 
-$blue: #1e88e5;
-$purple: #7b1fa2;
-$light-grey: rgb(199, 199, 199);
-
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-};
-
-body{
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-};
-
-input, select{
-  height: 42px;
-  padding: $s-padding;
-  font-size: $m-font;
-  border-radius: $m-radius;
-  margin: $m-margin;
-  border: 1px solid $light-grey;
-};
-
-button{
-  height: 42px;
-  border: none;
-  border-radius: $m-radius;
-  font-size: $m-font;
-  text-transform: uppercase;
-  cursor: pointer;
-  padding: 0 $m-padding;
-};
-
-ul{
-  list-style: none;
-}
-
-// Enter Form
-
-.enter-form{
-  display: flex;
-  flex-direction: column;
-  box-shadow: $shadow;
-  border-radius: $m-radius;
-  width: 20vw;
-  min-width: 500px;
-  overflow: hidden;
-  &__heading{
-    background: $blue;
-    padding: $m-padding;
-    h2{
-      color: white;
-      text-transform: uppercase;
-    };
-  };
-  button{
-    margin: $m-margin;
-    background: $purple;
-    color: #fff;
-    transition: transform .1s linear;
-    &:hover{
-      transform: scale(1.02);
-      filter: brightness(1.1);
-    }
-  }
-};
-
-
-// Main chat window
-
-.chat-window{
-  width: 30vw;
-  height: 50vh;
-  min-width: 800px;
-  min-height: 350px;
-  box-shadow: $shadow;
-  border-radius: $m-radius;
-  overflow: hidden;
-  display: grid;
-  grid-template: max-content 1fr max-content / repeat(12,1fr);
-  &__header{
-    grid-column: 1 / -1;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: $s-padding $m-padding;
-    background: $blue;
-    h2{
-      color: #fff;
-    }
-  };
-  &__info{
-    grid-column: 1 / 4;
-    grid-row: 2;
-    height: 100%;
-    padding: $m-padding;
-    h3, h4{
-      margin-bottom: $s-margin;
-    }
-  };
-  .chat-messages{
-    grid-column: 4 / -1;
-    background: $light-grey;
-    padding: $m-padding;
-    height: 100%;
-    .message{
-      background: #fff;
-      padding: $s-padding;
-      border-radius: $m-radius;
-      margin-bottom: $m-margin;
-      p:first-child{
-        font-size: .8rem;
-        color: #1e88e5;
-        margin-bottom: $s-margin;
-      }
-    }
-  }
-  #chat-form{
-    grid-row: 3;
-    grid-column: 1/-1;
-    display: flex;
-    align-items: center;
-    input{
-      width: 100%;
-      margin-right: 0;
-    };
-    button{
-      margin-right: $m-margin;
-    }
-  }
-};
+@import './base/settings';
+@import './base/base';
+@import './components/enter-form';
+@import './components/chat-window';
