--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: 'Roboto';
+  src: url("../assets/Roboto/Roboto-Regular.ttf"); }
+
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +12,8 @@ body {
   width: 100vw;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  font-family: 'Roboto'; }
 
 input, select {
   height: 42px;
@@ -16,7 +21,7 @@ input, select {
   font-size: 1rem;
   border-radius: 4px;
   margin: 16px;
-  border: 1px solid #c7c7c7; }
+  border: 1px solid #c1c1c1; }
 
 button {
   height: 42px;
@@ -72,6 +77,8 @@ ul {
     background: #1e88e5; }
     .chat-window__header h2 {
       color: #fff; }
+    .chat-window__header button {
+      background: rgba(255, 255, 255, 0.482); }
   .chat-window__info {
     grid-column: 1 / 4;
     grid-row: 2;
@@ -79,13 +86,19 @@ ul {
     padding: 16px; }
     .chat-window__info h3, .chat-window__info h4 {
       margin-bottom: 8px; }
+    .chat-window__info h4 {
+      padding-bottom: 16px;
+      border-bottom: 1px solid #c1c1c1; }
+    .chat-window__info ul li {
+      margin-bottom: 8px; }
   .chat-window .chat-messages {
     grid-column: 4 / -1;
-    background: #c7c7c7;
+    background: #c1c1c1;
     padding: 16px;
-    height: 100%; }
+    height: 100%;
+    overflow-y: auto; }
     .chat-window .chat-messages .message {
-      background: #fff;
+      background: rgba(255, 255, 255, 0.8);
       padding: 8px;
       border-radius: 4px;
       margin-bottom: 16px; }
@@ -93,13 +106,18 @@ ul {
         font-size: .8rem;
         color: #1e88e5;
         margin-bottom: 8px; }
+      .chat-window .chat-messages .message p:nth-child(2) {
+        color: black; }
   .chat-window #chat-form {
     grid-row: 3;
     grid-column: 1/-1;
     display: flex;
-    align-items: center; }
+    align-items: center;
+    background: #e1e1e1; }
     .chat-window #chat-form input {
       width: 100%;
       margin-right: 0; }
     .chat-window #chat-form button {
-      margin-right: 16px; }
+      margin: 0 16px;
+      background: #7b1fa2;
+      color: #fff; }
