--- a/public/scss/components/_chat-window.scss
+++ b/public/scss/components/_chat-window.scss
@@ -78,3 +78,28 @@
     }
   }
 };
+
+@media screen and (max-width:768px) {
+  .chat-window{
+    min-height: 80vh;
+    min-width: 80%;
+    max-width: 100%;
+    &__info{
+      display: none;
+    };
+    .chat-messages{
+      grid-column: 1 / -1;
+    };
+  }
+};
+
+@media screen and (max-width: 400px){
+  body{
+    padding: 0;
+  }
+  .chat-window{
+    width: 100%;
+    height: 80%;
+    box-shadow: none;
+  }
+}
